trunk/test/T2/Fail/T2_badComma.ic
class Test{
	int a(int n){
		int a,b;
		
		if (n >= 10)
		{
			return 1;
		}
		else 
		{
			return 0;
		}
	}
}
